feat: nombre comercial para sección product-carousel en scroll nav

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,3 +44,11 @@
     {% sections 'footer-group' %}
   </body>
 </html>
+
+{% comment %}
+  Oxford Theme desarrollado por Kleyver Urbina
+  Autor: Kleyver Urbina - kleyvercell2@gmail.com
+  GitHub: kleyver.x
+  Fecha de entrega: 10 de julio de 2025
+  Prohibida su redistribución sin autorización.
+{% endcomment %}
