--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -1,4 +1,12 @@
 {% comment %}
+  Oxford Theme desarrollado por Kleyver Urbina
+  Autor: Kleyver Urbina - kleyvercell2@gmail.com
+  GitHub: kleyver.x
+  Fecha de entrega: 10 de julio de 2025
+  Prohibida su redistribución sin autorización.
+{% endcomment %}
+
+{% comment %}
   Página de producto mejorada: centrada, imágenes optimizadas, background full width
 {% endcomment %}
 
